client/styles/header.css
@tailwind base;
@tailwind components;
@tailwind utilities;

header {
  width: 100%;
  display: flex;
  height: 10vh;
  background-color: lightblue;
  align-items: center;
  justify-content: space-between;
  padding-left: 20px;
  padding-right: 20px;
  position: fixed;
  top: 0;
}

.headerUserInfo {
  height: 10vh;
  display: flex;
  align-items: center;
}

.headerPfp {
  height: 70%;
  border-radius: 10%;
  margin-left: 10px;
  aspect-ratio: 1 / 1;
}

button {
  background-color: white;
  padding: 8px 10px;
  border-radius: 10%;
}

.addPost {
  color: white;
  font-weight: bold;
  font-size: 3rem;
  text-align: center;
  margin-right: 10px;
  margin-bottom: 10px;
}

